properly sset up preitter/eslint again

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,31 @@
 {
-	"extends": "eslint:recommended",
+	"extends": ["eslint:recommended","plugin:prettier/recommended"],
 	"env": {
 		"node": true,
 		"es6": true
 	},
+	"plugins": [
+		"prettier"
+	],
 	"parserOptions": {
 		"ecmaVersion": "latest",
 		"parser": "@babel/eslint-parser"
 	},
+	"ignorePatterns": [
+		"node_modules",
+		"build",
+		"dist",
+		"public"
+	  ],
 	"rules": {
+		"prettier/prettier": "error",
         "arrow-spacing": ["warn", { "before": true, "after": true }],
-		"brace-style": ["error", "stroustrup", { "allowSingleLine": true }],
-		"comma-dangle": ["error", "always-multiline"],
 		"comma-spacing": "error",
 		"comma-style": "error",
 		"curly": ["error", "multi-line", "consistent"],
 		"dot-location": ["error", "property"],
 		"handle-callback-err": "off",
-		"indent": ["error", "tab"],
+		"indent": ["error", 2],
 		"keyword-spacing": "error",
 		"max-nested-callbacks": ["error", { "max": 4 }],
 		"max-statements-per-line": ["error", { "max": 2 }],
@@ -33,7 +41,6 @@
 		"no-var": "error",
 		"object-curly-spacing": ["error", "always"],
 		"prefer-const": "error",
-		"quotes": ["error", "single"],
 		"semi": ["error", "always"],
 		"space-before-blocks": "error",
 		"space-before-function-paren": ["error", {
