--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@babel/core": "^7.16.12",
     "@babel/eslint-parser": "^7.16.5",
     "eslint": "^8.7.0",
-    "nodemon": "^2.0.15"
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1"
   }
 }
